fix(tabs): change gap between icon & text

--- a/packages/tabs/src/tabs.pcss
+++ b/packages/tabs/src/tabs.pcss
@@ -20,7 +20,7 @@
     border-bottom: var(--sds-space-border-weight-bold) solid transparent;
     color: var(--sds-color-text-primary);
     display: flex;
-    gap: var(--sds-space-gap-small);
+    gap: var(--sds-space-gap-tiny);
     font-size: var(--sds-typography-label-l-fontsize);
     font-weight: var(--sds-typography-label-l-fontweight);
     line-height: var(--sds-typography-label-l-lineheight);
